/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://oss.sonatype.org/content/repositories/snapshots')
    }

    maven {
        url = uri('https://oss.sonatype.org/content/repositories/releases')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

group = 'io.swagger.parser.v3'
version = '2.1.13.3'
java.sourceCompatibility = JavaVersion.VERSION_1_8

publishing {
    repositories {
        maven {
            name = "wiremock-cloud-public"
            url = "s3://wiremock-cloud-maven-public-repo/releases/"
            credentials(AwsCredentials) {
                accessKey = System.getenv("AWS_ACCESS_KEY_ID")
                secretKey = System.getenv("AWS_SECRET_ACCESS_KEY")
            }
        }
    }
    publications {
        mavenPublication(MavenPublication) {
            from components.java
        }
    }
}

java {
    withSourcesJar()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

test {
    jvmArgs '-Djdk.attach.allowAttachSelf=true'
}
